[workspace]

exclude = ["arceos"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["muou000 <muou000@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/muou000/MyOS"
repository = "https://github.com/muou000/MyOS"

[workspace.dependencies]
axfeat = { path = "arceos/api/axfeat" }

axconfig = { path = "arceos/modules/axconfig" }
axhal = { path = "arceos/modules/axhal" }
axlog = { path = "arceos/modules/axlog" }
axruntime = { path = "arceos/modules/axruntime" }

axplat-riscv64-qemu-virt = "0.3.0"
axplat-loongarch64-qemu-virt = "0.3.0"

syscalls = { git = "https://github.com/muou000/syscalls.git", rev = "efac241", default-features = false }

[package]
name = "My"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
qemu = []

[dependencies]
axhal.workspace = true
axlog.workspace = true
axconfig.workspace = true
axruntime.workspace = true
axfeat.workspace = true
syscalls.workspace = true

[target.'cfg(target_arch = "riscv64")'.dependencies]
axplat-riscv64-qemu-virt.workspace = true

[target.'cfg(target_arch = "loongarch64")'.dependencies]
axplat-loongarch64-qemu-virt.workspace = true
