[package]
name = "mysyscalls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axhal.workspace = true
axlog.workspace = true
axerrno.workspace = true
axtask = { workspace = true }
axfs = { path = "../arceos/modules/axfs" }
axio = { version = "0.1", features = ["alloc"] }
linkme = "0.3"
memory_addr = { version = "0.4" }
spin = "0.9"

syscalls.workspace = true
mycore = { path = "../mycore" }